--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Hogarth16352/HeroesSPAReactApp.git",
   "name": "heroes-spa",
   "private": true,
   "version": "0.0.0",
