Se agrega la propiedad homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Hogarth16352/HeroesSPAReactApp.git",
+  "homepage": "https://hogarth16352.github.io/HeroesSPAReactApp/",
   "name": "heroes-spa",
   "private": true,
   "version": "0.0.0",
